# whisper_cpp_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: audio_capture.launch  vad.launch  whisper.launch
notebooks and sketches/: audio_tester.py  ros_stt_test.py  test.ipynb  vad.py
src/: vad_node.py  whisper_node.cpp
